--- a/Week_3/Project_1.ipynb
+++ b/Week_3/Project_1.ipynb
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "Kindly Input the amount due: N 1000\n",
-      "Kindly Select method of payment; cash or card:  1000\n",
+      "Kindly Select method of payment; cash or card:  card\n",
       "You have opted for the card payment method. Kindly enter the Amount due to be paid in card: N 1000\n"
      ]
     },
