--- a/Week_4/Project_2.ipynb
+++ b/Week_4/Project_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "0ab99bb5-527b-432c-8ad6-ed0080d7d042",
    "metadata": {},
    "outputs": [
@@ -18,17 +18,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Kindly Enter Your Name: Hillary\n",
-      "Kindly Enter Your Employee number: 001334\n",
-      "Kindly Enter Your Years Of Experience: 9\n",
-      "Kindly Enter Your Age: 22\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Employee's Annual Tax Revenue (ATR) is N550,000.\n"
+      "Kindly Enter Your Name: 30\n"
      ]
     }
    ],
