--- a/Week_6/Project_2.ipynb
+++ b/Week_6/Project_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "71cd13d8-62d0-48cf-8016-bcbad1fb02db",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please enter your score in JAMB:  350\n"
+      "Please enter your score in JAMB:  340\n"
      ]
     },
     {
@@ -24,27 +24,19 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter grade for Mathematics:  50\n",
-      "Enter grade for English:  60\n",
-      "Enter grade for Physics:  50\n",
-      "Enter grade for Chemistry:  60\n",
-      "Enter grade for Biology:  50\n"
+      "Enter grade for Mathematics:  A\n",
+      "Enter grade for English:  A\n",
+      "Enter grade for Physics:  A\n",
+      "Enter grade for Chemistry:  A\n",
+      "Enter grade for Biology:  A\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorry, your WAEC result did not meet the required minimum.\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
+      "Congratulations! Your WAEC result met the minimum requirements\n",
+      "Congratulations! You meet the requirements to be admitted into the Computer Science department.\n"
      ]
     }
    ],
